align terraform and python code

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ terraform.tfstate
 .terraform.lock.hcl
 python-client/.env
 python-client/role-definition.json
+python-client/role-definition.md
+terraform.tfstate.backup
